--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,11 +2,11 @@
 add_subdirectory(Build)
 add_subdirectory(3rdParty)
 add_subdirectory(Base)
-add_subdirectory(App)
+#add_subdirectory(App)
 add_subdirectory(Main)
-add_subdirectory(Mod)
+#add_subdirectory(Mod)
 if(BUILD_GUI)
-	add_subdirectory(Gui)
+	#add_subdirectory(Gui)
 	configure_file(Doc/freecad.qhc ${CMAKE_BINARY_DIR}/doc/freecad.qhc COPYONLY)
 	configure_file(Doc/freecad.qch ${CMAKE_BINARY_DIR}/doc/freecad.qch COPYONLY)
 endif(BUILD_GUI)
